# visturing

./: README.md  pyproject.toml
Experiments/Experiment_1/: template.ipynb
Experiments/Experiment_2/: template.ipynb
Experiments/Experiment_3/: template.ipynb
Experiments/Experiment_4_5/: template.ipynb
use_examples/: visturing_evaluate_all_NLPD.ipynb  visturing_evaluate_all_PIQ_DISTS.ipynb  visturing_evaluate_all_PIQ_LPIPS.ipynb  visturing_evaluate_all_PIQ_ssim.ipynb  visturing_evaluate_all_PerceptNet.ipynb  visturing_evaluate_all_RMSE.ipynb
visturing/properties/: __init__.py  math_utils.py  prop1.py  prop10.py  prop2.py  prop3_4.py  prop5.py  prop6.py  prop6_7.py  prop8.py  prop9.py  utils.py
